log
Thu 11 May 2023 04:16:09 PM UTC: 
 tests:  0|4
total_score: 0/70
57233e7
Thu 11 May 2023 04:36:38 PM UTC: 
 heap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:43: error: ‘capac’ undeclared (first use in this function)
   22 |   dato->heapArray=malloc(sizeof(heapElem)*capac);
      |                                           ^~~~~
heap.c:22:43: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
972b21a
Thu 11 May 2023 04:36:52 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘heap_top’:
heap.c:22:47: error: ‘*dato.capac’ is used uninitialized [-Werror=uninitialized]
   22 |   dato->heapArray=malloc(sizeof(heapElem)*dato->capac);
      |                                           ~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1484129
Thu 11 May 2023 04:37:14 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
1b34af1
Thu 11 May 2023 04:38:21 PM UTC: 
 heap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  1|3
total_score: 10/70
3c13afa
Thu 11 May 2023 04:39:13 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
172e006
Thu 11 May 2023 04:44:10 PM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:23: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   21 |   return pq->heapArray[0];
      |          ~~~~~~~~~~~~~^~~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
42f2c59
Thu 11 May 2023 04:46:49 PM UTC: 
 heap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
80bbce8
Thu 11 May 2023 05:16:10 PM UTC: 
 heap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  5|2
total_score: 35/70
c6b58a3
Thu 11 May 2023 05:16:35 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
583624a
Thu 11 May 2023 05:17:06 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
6731619
Thu 11 May 2023 05:17:23 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
fd9cf9b
Thu 11 May 2023 05:18:07 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
80e8c3f
Thu 11 May 2023 05:18:35 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 35/70
4807cce
Thu 11 May 2023 05:20:19 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|2
total_score: 35/70
5fe5619
Thu 11 May 2023 05:22:05 PM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
25a1b2d
Thu 11 May 2023 05:24:34 PM UTC: 
 heap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
5efe1f9
Thu 11 May 2023 05:32:48 PM UTC: 
 heap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:66:8: error: variable or field ‘raiz’ declared void
   66 |   void raiz=heap_top(pq);
      |        ^~~~
heap.c:66:13: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   66 |   void raiz=heap_top(pq);
      |             ^~~~~~~~
heap.c:69:3: error: ‘aux’ undeclared (first use in this function)
   69 |   aux=pq->heapArray[size].data;
      |   ^~~
heap.c:69:3: note: each undeclared identifier is reported only once for each function it appears in
heap.c:69:21: error: ‘size’ undeclared (first use in this function)
   69 |   aux=pq->heapArray[size].data;
      |                     ^~~~
heap.c:74:24: error: ‘s’ undeclared (first use in this function)
   74 |   while((pq->heapArray[s].priority)>(pq->heapArray[padre].priority)){
      |                        ^
heap.c:74:52: error: ‘padre’ undeclared (first use in this function)
   74 |   while((pq->heapArray[s].priority)>(pq->heapArray[padre].priority)){
      |                                                    ^~~~~
cc1: all warnings being treated as errors
Compilation failed
a4be9d8
